--- a/JerseyCoffee/Modules/AddItem/Material/JSDAddEditMaterialVC.xib
+++ b/JerseyCoffee/Modules/AddItem/Material/JSDAddEditMaterialVC.xib
@@ -33,22 +33,22 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nl1-Xc-pmA">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="1349.5"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xqa-ak-Rrt" customClass="MDCTextField">
-                                    <rect key="frame" x="20" y="100" width="374" height="30"/>
+                                    <rect key="frame" x="20" y="40" width="374" height="30"/>
                                     <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nSq-Av-lEc" customClass="MDCTextField">
-                                    <rect key="frame" x="20" y="150" width="374" height="30"/>
+                                    <rect key="frame" x="20" y="90" width="374" height="30"/>
                                     <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CQp-nZ-XFe">
-                                    <rect key="frame" x="20" y="200" width="374" height="150"/>
+                                    <rect key="frame" x="20" y="140" width="374" height="150"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="烘培程度" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Yh-dU-a5p">
                                             <rect key="frame" x="0.0" y="20" width="69.5" height="21"/>
@@ -131,7 +131,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bHj-ws-mwi" customClass="MDCMultilineTextField">
-                                    <rect key="frame" x="20" y="370" width="374" height="100"/>
+                                    <rect key="frame" x="20" y="310" width="374" height="100"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="100" id="pXq-7G-EH8"/>
@@ -144,7 +144,7 @@
                                 <constraint firstItem="CQp-nZ-XFe" firstAttribute="trailing" secondItem="xqa-ak-Rrt" secondAttribute="trailing" id="5u6-Tc-gf7"/>
                                 <constraint firstItem="nSq-Av-lEc" firstAttribute="top" secondItem="xqa-ak-Rrt" secondAttribute="bottom" constant="20" id="6iP-wE-S11"/>
                                 <constraint firstAttribute="trailing" secondItem="xqa-ak-Rrt" secondAttribute="trailing" constant="20" id="B0D-zI-FBn"/>
-                                <constraint firstItem="xqa-ak-Rrt" firstAttribute="top" secondItem="Nl1-Xc-pmA" secondAttribute="top" constant="100" id="CxQ-3w-Zjz"/>
+                                <constraint firstItem="xqa-ak-Rrt" firstAttribute="top" secondItem="Nl1-Xc-pmA" secondAttribute="top" constant="40" id="CxQ-3w-Zjz"/>
                                 <constraint firstItem="xqa-ak-Rrt" firstAttribute="leading" secondItem="Nl1-Xc-pmA" secondAttribute="leading" constant="20" id="Iyl-je-rzw"/>
                                 <constraint firstItem="bHj-ws-mwi" firstAttribute="trailing" secondItem="xqa-ak-Rrt" secondAttribute="trailing" id="KIf-11-R2v"/>
                                 <constraint firstItem="nSq-Av-lEc" firstAttribute="leading" secondItem="xqa-ak-Rrt" secondAttribute="leading" id="N6k-vN-37w"/>
@@ -161,7 +161,7 @@
                         <constraint firstAttribute="trailing" secondItem="Nl1-Xc-pmA" secondAttribute="trailing" id="Fo2-Pj-YE3"/>
                         <constraint firstItem="Nl1-Xc-pmA" firstAttribute="width" secondItem="fUI-TS-m9p" secondAttribute="width" id="TJf-sW-5dm"/>
                         <constraint firstAttribute="bottom" secondItem="Nl1-Xc-pmA" secondAttribute="bottom" id="TRy-iU-51E"/>
-                        <constraint firstItem="Nl1-Xc-pmA" firstAttribute="height" secondItem="fUI-TS-m9p" secondAttribute="height" id="qFm-jd-OV3"/>
+                        <constraint firstItem="Nl1-Xc-pmA" firstAttribute="height" secondItem="fUI-TS-m9p" secondAttribute="height" multiplier="1.65" id="qFm-jd-OV3"/>
                     </constraints>
                 </scrollView>
             </subviews>
