--- a/JerseyCoffee/Supporting Files/Base.lproj/LaunchScreen.storyboard
+++ b/JerseyCoffee/Supporting Files/Base.lproj/LaunchScreen.storyboard
@@ -19,11 +19,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="luanch_log" translatesAutoresizingMaskIntoConstraints="NO" id="N1j-cO-v4l">
-                                <rect key="frame" x="173" y="697" width="68" height="68"/>
+                                <rect key="frame" x="164.5" y="685.5" width="85" height="85"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="85" id="Wdc-NR-iNo"/>
+                                    <constraint firstAttribute="height" constant="85" id="jKY-VX-CYb"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="咖啡知识Note" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="19g-g1-wjS">
-                                <rect key="frame" x="99.5" y="785" width="215.5" height="41"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="35"/>
+                                <rect key="frame" x="95.5" y="790.5" width="223" height="35.5"/>
+                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="35"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
